log
Thu 09 May 2024 03:48:22 PM UTC: 
 treemap.c | 33 ++++++++++++++++++++++++++++++---
 1 file changed, 30 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   64 |     TreeNode * parent = NULL;
      |                ^~~~~~
treemap.c: In function ‘nextTreeMap’:
treemap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
  114 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8953d94
Thu 09 May 2024 03:50:48 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:121:1: error: control reaches end of non-void function [-Werror=return-type]
  121 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b8beefe
Thu 09 May 2024 03:52:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
db6144f
Thu 09 May 2024 03:53:33 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:76:8: error: expected ‘(’ before ‘if’
   76 |     if if (tree->lower_than(newNode->pair->key, current->pair->key)){
      |        ^~
      |        (
treemap.c:76:8: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   76 |     if if (tree->lower_than(newNode->pair->key, current->pair->key)){
      |        ^~
cc1: all warnings being treated as errors
Compilation failed
d258608
Thu 09 May 2024 03:53:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6a920be
Thu 09 May 2024 03:54:53 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e8ec1fe
Thu 09 May 2024 03:56:17 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
7013e50
Thu 09 May 2024 03:56:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
60aceda
Thu 09 May 2024 03:57:44 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|6
total_score: 5/70
9d6e188
Thu 09 May 2024 04:00:12 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
  123 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0b2ff3a
Thu 09 May 2024 04:00:38 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|5
total_score: 15/70
5e99116
Thu 09 May 2024 04:01:50 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  14|4
total_score: 20/70
4edc2fb
Thu 09 May 2024 04:09:33 PM UTC: 
 treemap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:158:1: error: expected ‘;’ before ‘}’ token
  158 | }
      | ^
Compilation failed
8e4acd3
Thu 09 May 2024 04:09:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
119581e
Thu 09 May 2024 04:12:43 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  17|4
total_score: 25/70
18293f9
Sun 12 May 2024 02:49:58 AM UTC: 
 tests:  17|4
total_score: 25/70
04b74dd
Sun 12 May 2024 02:50:07 AM UTC: 
 treemap.c | 91 +++++++++++++++++++++++++++++++++++++--------------------------
 1 file changed, 53 insertions(+), 38 deletions(-)
 tests:  15|4
total_score: 25/70
7a46310
